2006-02-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.h src/term_api.h:  Move line type definitions into
	term_api.h, since they exist to request specific terminal behavior.
	Remove definition of L_TYPE_NODRAW. It is now superseded by LT_NODRAW.

	* src/misc.c (parse_colorspec);  Now that LT_BACKGROUND is sage to pass
	to all terminal drivers, allow it as a legal linetype (-3) in commands.

2006-02-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/tables.c (set_palette_tbl pm3d_color_names_tbl): Support both
	spellings of "gray" and "grey".

2006-02-23  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc term/post.trm: Correction of misprints.

2006-02-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/pointsize.dem: Add 'reset' at the end.

2006-02-21  Daniel Sebald  <daniel.sebald@ieee.org>

	* term/post.trm (PS_encode_image): The computation for the max number
	of required bytes for encoding the image didn't take into account that
	there is 8 bit alignment (potentially additional 7 bits) at the end
	of each image line. The encoded image was written outside memory on
	the heap and corrupted when cleared. Fixed, and added an assert()
	test, after the fact, to compare encode size against memory size.

2006-02-21  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gplt_x11.c (scan_palette_from_buf): The read_input() status
	was ignored and consequently when a partial read of the pipe happened
	a full line was not removed from pipe. For long palettes garbage
	remained in pipe when done and next command was bogus.

	* src/gplt_x11.c (read_input_line): A new routine that will check
	status of read_input and continue reading if only a partial read.
	If there are too many reads, the routine gives warning.

2006-02-21  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/getcolor.c (interpolate_color_from_gray): The index could go
	to one past the end of the array and cause a program crash. This